crates/vouched/tests/ui/vouched/range_unsupported_type.stderr
error: range(...) is only supported for integer and float types: i8, i16, i32, i64, i128, u8, u16, u32, u64, u128, f32, f64
 --> tests/ui/vouched/range_unsupported_type.rs:5:21
  |
5 | struct PointerSized(usize);
  |                     ^^^^^
